@@ -1,0 +1,46 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  min_layer = 0,
+  max_layer = 2,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+tile{
+  layer = 0,
+  x = 16,
+  y = 48,
+  width = 104,
+  height = 32,
+  pattern = "13",
+}
+
+destination{
+  name = "destination",
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 1,
+}
+
+npc{
+  name = "npc",
+  layer = 0,
+  x = 56,
+  y = 29,
+  direction = 0,
+  subtype = 0,
+  sprite = "entities/block",
+}
+
