@@ -2,6 +2,7 @@ map{ id = "all_entities", description = "All entities" }
 map{ id = "basic_test", description = "Basic test" }
 map{ id = "bugs/486_diagonal_dynamic_tiles", description = "#486: Wrong obstacles with diagonal dynamic tiles" }
 map{ id = "bugs/526_get_entities_same_region", description = "#526: map:get_entities_in_same_region()" }
+map{ id = "bugs/633_straight_movement_speed_zero", description = "#633: Straight movements resets speed to zero when reaching an obstacle" }
 map{ id = "bugs/648_non_blocking_streams", description = "#648: Non-blocking streams direction change" }
 map{ id = "bugs/656_map_set_world", description = "#656: map:set_world()" }
 map{ id = "bugs/664_chest_get_set_treasure", description = "#664: chest:get/set_treasure()" }
