@@ -46,6 +46,7 @@ Engine changes
 * Fix crash when the teletransporter after stairs is missing.
 * Fix text_surface:set_rendering_mode() not working (#833).
 * Fix circle_movement:set_initial_angle() not working (#721).
+* Fix straight movement setting speed to zero when reaching obstacles (#633).
 * Fix support of joypads with multiple axes.
 * Fix sol.input.get_mouse_coordinates() ignoring the zoom factor (#734).
 
